--- a/.github/workflows/workers.yml
+++ b/.github/workflows/workers.yml
@@ -1,15 +1,18 @@
-name: Deploy Worker
+name: Deploy Cloudflare Worker
 
 on:
-    push:
-        branches:
-            - main
-        paths:
-            - 'proxy/**'
+  push:
+    branches:
+      - main
+    paths:
+      - 'proxy/**'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: proxy
 
     steps:
       - name: Checkout repository
@@ -18,9 +21,8 @@ jobs:
       - name: Install Wrangler
         run: npm install -g wrangler
 
-      - name: Publish Worker
-        run: |
-          wrangler publish wrangler.jsonc
+      - name: Deploy Worker
+        run: wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
