--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,4 +23,5 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: testproj
-          directory: ./static  # your build output folder
+          directory: ./static
+          wranglerVersion: '4'
