--- a/static/wrangler.jsonc
+++ b/static/wrangler.jsonc
@@ -6,6 +6,7 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "testproj",
 	"compatibility_date": "2025-09-21",
+	"type":"static",
 	"assets": {
 		"directory": "./"
 	},
